# open-notebooklm

./: Dockerfile  app.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: deploy.yml
