[tool.poetry]
name = "open-notebooklm"
version = "0.1.0"
description = "Podcast generation app"
authors = ["holynakamoto <your-email>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.44.1"
fastapi = "^0.115.0"
pypdf = "^4.1.0"
pydub = "^0.25.1"
fireworks-ai = "^0.15.6"
suno-bark = { git = "https://github.com/suno-ai/bark.git", rev = "f4f32d4cd480dfec1c245d258174bc9bde3c2148" }
loguru = "^0.7.0"
modal = "^0.73.116"
instructor = "^1.6.2"  # Added instructor
aiohttp = "^3.10.8"
annotated-types = "^0.7.0"
anyio = "^4.6.0"
attrs = "^24.2.0"
certifi = "^2024.8.30"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
einops = "^0.8.0"
encodec = "^0.1.1"
filelock = "^3.16.1"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httpx = "^0.27.2"
idna = "^3.10"
jinja2 = "^3.1.4"
jiter = "^0.5.0"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.5"
mdurl = "^0.1.2"
multidict = "^6.1.0"
numpy = "^2.0.2"
openai = "^1.50.2"
orjson = "^3.10.7"
packaging = "^24.1"
pydantic = "^2.9.2"
pydantic_core = "^2.23.4"
python-dateutil = "^2.9.0.post0"
python-multipart = "^0.0.12"
requests = "^2.32.3"
rich = "^13.8.1"
six = "^1.16.0"
sniffio = "^1.3.1"
starlette = "^0.38.6"
tiktoken = "^0.7.0"
torch = "^2.6.0"
torchaudio = "^2.6.0"
tqdm = "^4.66.5"
typer = "^0.12.5"
typing_extensions = "^4.12.2"
urllib3 = "^2.2.3"
websockets = "^12.0"
yarl = "^1.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
